--- a/quiz-user-service/src/main/resources/application.properties
+++ b/quiz-user-service/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=quiz-user-service
+
+spring.h2.console.enabled=true
+spring.datasource.url=jdbc:h2:file:./quiz-user-service/data/quiz_user;DB_CLOSE_ON_EXIT=TRUE;AUTO_SERVER=TRUE
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=update
+
